buttonクリックして関数発火するまで

--- a/fumihumi/sample.html
+++ b/fumihumi/sample.html
@@ -18,16 +18,29 @@
     <h1>this is sample html</h1>
 
     <h3>button samples</h3>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
     <button type="button" class="btn btn-success">Success</button>
     <button type="button" class="btn btn-danger">Danger</button>
     <button type="button" class="btn btn-warning">Warning</button>
     <button type="button" class="btn btn-info">Info</button>
     <button type="button" class="btn btn-light">Light</button>
     <button type="button" class="btn btn-dark">Dark</button>
+    <button id="js-btn-primary" type="button" class="btn btn-primary">Primary</button>
+    <button id="js-btn-secondary" type="button" class="btn btn-secondary">Secondary</button>
     
     <button type="button" class="btn btn-link">Link</button>
   </div>
+
+<!-- script -->
+  <script>
+    //buttonクリックした時の関数
+    function clickBtn(e){
+      alert(e.currentTarget.id);
+    }
+    var btnPrimary = document.getElementById('js-btn-primary');
+    btnPrimary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-secondary');
+    btnSecondary.addEventListener('click', clickBtn);
+  </script>
 </body>
 </html>
