--- a/fumihumi/sample.html
+++ b/fumihumi/sample.html
@@ -43,10 +43,16 @@
     // btnSecondary.addEventListener('click', clickBtn);
     
     //btnのクラスがついてるのを取得
-    var btns = document.getElementsByClassName('btn');
-    for (var i = 0; i < btns.length; i++){
-      btns[i].addEventListener('click', clickBtn);
-    }
+    // var btns = document.getElementsByClassName('btn');
+    // for (var i = 0; i < btns.length; i++){
+    //   btns[i].addEventListener('click', clickBtn);
+    // }
+    
+    // var btns = document.querySelectorAll('.btn')
+    // btns.forEach(function(e){
+    //   e.addEventListener('click', clickBtn);
+    // });
+    document.querySelectorAll('.btn').forEach( e => e.addEventListener('click', clickBtn));
   </script>
 </body>
 </html>
