ボ　タ　ン　祭　り

--- a/haduki/sample.html
+++ b/haduki/sample.html
@@ -20,7 +20,21 @@
 </head>
 
 <body>
-  this is sample html
+  <div class="container">
+    <h1>this is sample html</h1>
+
+    <h3>button samples</h3>
+    <button id="js-btn-primary" type="button" class="btn btn-primary">Primary</button>
+    <button id="js-btn-secondary" type="button" class="btn btn-secondary">Secondary</button>
+    <button id="js-btn-success" type="button" class="btn btn-success">Success</button>
+    <button id="js-btn-danger" type="button" class="btn btn-danger">Danger</button>
+    <button id="js-btn-warning" type="button" class="btn btn-warning">Warning</button>
+    <button id="js-btn-info" type="button" class="btn btn-info">Info</button>
+    <button id="js-btn-light" type="button" class="btn btn-light">Light</button>
+    <button id="js-btn-dark" type="button" class="btn btn-dark">Dark</button>
+
+    <button id="js-btn-link" type="button" class="btn btn-link">Link</button>
+  </div>
 </body>
 
 </html>
