--- a/simomu/rennsyuu.html
+++ b/simomu/rennsyuu.html
@@ -13,7 +13,25 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</head>ody>
-  gitの練習
+</head>
+<body>
+  <div class="container">
+    <h1>this is sample html</h1>
+
+    <h3>button samples</h3>
+    <button id="js-btn-primary" type="button" class="btn btn-primary">Primary</button>
+    <button id="js-btn-secondary" type="button" class="btn btn-secondary">Secondary</button>
+    <button id="js-btn-success" type="button" class="btn btn-success">Success</button>
+    <button id="js-btn-danger" type="button" class="btn btn-danger">Danger</button>
+    <button id="js-btn-warning" type="button" class="btn btn-warning">Warning</button>
+    <button id="js-btn-info" type="button" class="btn btn-info">Info</button>
+    <button id="js-btn-light" type="button" class="btn btn-light">Light</button>
+    <button id="js-btn-dark" type="button" class="btn btn-dark">Dark</button>
+    
+    <button id="js-btn-link" type="button" class="btn btn-link">Link</button>
+  </div>
 </body>
+
+
+  
 </html>
