--- a/haduki/sample.html
+++ b/haduki/sample.html
@@ -35,6 +35,33 @@
 
     <button id="js-btn-link" type="button" class="btn btn-link">Link</button>
   </div>
+
+  <!-- script -->
+  <script>
+    //buttonクリックした時の関数
+    function clickBtn(e) {
+      alert(e.currentTarget.id);
+    }
+
+    var btnPrimary = document.getElementById('js-btn-primary');
+    btnPrimary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-secondary');
+    btnSecondary.addEventListener('click', clickBtn);
+
+    //btnのクラスがついてるのを取得
+    // var btns = document.getElementsByClassName('btn');
+    // for (var i = 0; i < btns.length; i++){
+    //   btns[i].addEventListener('click', clickBtn);
+    // }
+    // for読みにくくない？？？？？？？？？？
+
+    // let btns = document.querySelectorAll('.btn');
+    // btns.forEach(e =>  e.addEventListener('click', clickBtn) );
+
+    //変数いらないか。
+    //document.querySelectorAll('.btn').forEach( e => e.addEventListener('click', clickBtn));
+  </script>
 </body>
 
 </html>
