--- a/yozakura/index.html
+++ b/yozakura/index.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sample</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
 </head>
 
 <body>
-    this is sample html
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <button id="js-btn-primary" type="button" class="btn btn-primary">Primary</button>
+    <button id="js-btn-secondary" type="button" class="btn btn-secondary">Secondary</button>
+    <button id="js-btn-success" type="button" class="btn btn-success">Success</button>
+    <button id="js-btn-danger" type="button" class="btn btn-danger">Danger</button>
+    <button id="js-btn-warning" type="button" class="btn btn-warning">Warning</button>
+    <button id="js-btn-info" type="button" class="btn btn-info">Info</button>
+    <button id="js-btn-light" type="button" class="btn btn-light">Light</button>
+    <button id="js-btn-dark" type="button" class="btn btn-dark">Dark</button>
+
+
+
 </body>
 
 </html>
