JS変更（コミットしすぎ）

--- a/mzk0128/test.html
+++ b/mzk0128/test.html
@@ -43,6 +43,24 @@
     var btnSecondary = document.getElementById('js-btn-secondary');
     btnSecondary.addEventListener('click', clickBtn);
 
+    var btnSecondary = document.getElementById('js-btn-success');
+    btnSecondary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-danger');
+    btnSecondary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-warning');
+    btnSecondary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-info');
+    btnSecondary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-light');
+    btnSecondary.addEventListener('click', clickBtn);
+
+    var btnSecondary = document.getElementById('js-btn-dark');
+    btnSecondary.addEventListener('click', clickBtn);
+
   </script>
   </body>
 
