--- a/Danjiri/aiueo.html
+++ b/Danjiri/aiueo.html
@@ -5,15 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Sample</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</head>
+
+<title>Document</title>
 </head>
 
 <body>
-    <h1>hello world</h1>
+    <div class="container">
+        <h1>this is sample html</h1>
+
+        <h3>button samples</h3>
+        <button id="js-btn-primary" type="button" class="btn btn-primary">Primary</button>
+        <button id="js-btn-secondary" type="button" class="btn btn-secondary">Secondary</button>
+        <button id="js-btn-success" type="button" class="btn btn-success">Success</button>
+        <button id="js-btn-danger" type="button" class="btn btn-danger">Danger</button>
+        <button id="js-btn-warning" type="button" class="btn btn-warning">Warning</button>
+        <button id="js-btn-info" type="button" class="btn btn-info">Info</button>
+        <button id="js-btn-light" type="button" class="btn btn-light">Light</button>
+        <button id="js-btn-dark" type="button" class="btn btn-dark">Dark</button>
+        <button id="js-btn-link" type="button" class="btn btn-link">Link</button>
+
+        <script>
+            //buttonクリックした時の関数
+            function clickBtn(e) {
+                alert(e.currentTarget.id);
+            }
+
+            var btnPrimary = document.getElementById('js-btn-primary');
+            btnPrimary.addEventListener('click', clickBtn);
+
+            var btnSecondary = document.getElementById('js-btn-secondary');
+            btnSecondary.addEventListener('click', clickBtn);
+
+            var btnSuccess = document.getElementById('js-btn-success');
+            btnSecondary.addEventListener('click', clickBtn);
+
+            //btnのクラスがついてるのを取得
+            // var btns = document.getElementsByClassName('btn');
+            // for (var i = 0; i < btns.length; i++){
+            //   btns[i].addEventListener('click', clickBtn);
+            // }
+            // for読みにくくない？？？？？？？？？？
+
+            // let btns = document.querySelectorAll('.btn');
+            // btns.forEach(e =>  e.addEventListener('click', clickBtn) );
+
+            //変数いらないか。
+            //document.querySelectorAll('.btn').forEach( e => e.addEventListener('click', clickBtn));
+        </script>
+    </div>
 </body>
 
 </html>
