--- a/Danjiri/aiueo.html
+++ b/Danjiri/aiueo.html
@@ -46,7 +46,7 @@
             btnSecondary.addEventListener('click', clickBtn);
 
             var btnSuccess = document.getElementById('js-btn-success');
-            btnSecondary.addEventListener('click', clickBtn);
+            btnSuccess.addEventListener('click', clickBtn);
 
             //btnのクラスがついてるのを取得
             // var btns = document.getElementsByClassName('btn');
