--- a/Danjiri/aiueo.html
+++ b/Danjiri/aiueo.html
@@ -48,6 +48,9 @@
             var btnSuccess = document.getElementById('js-btn-success');
             btnSuccess.addEventListener('click', clickBtn);
 
+            var btnDanger = document.getElementById('js-btn-danger');
+            btnDanger.addEventListener('click', clickBtn);
+
             //btnのクラスがついてるのを取得
             // var btns = document.getElementsByClassName('btn');
             // for (var i = 0; i < btns.length; i++){
