変数名修正

--- a/mzk0128/test.html
+++ b/mzk0128/test.html
@@ -37,28 +37,28 @@
       alert(e.currentTarget.id);
     }
 
-    var btnPrimary = document.getElementById('js-btn-primary');
+    var btn1 = document.getElementById('js-btn-primary');
     btnPrimary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-secondary');
+    var btn2 = document.getElementById('js-btn-secondary');
     btnSecondary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-success');
+    var btn3 = document.getElementById('js-btn-success');
     btnSecondary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-danger');
+    var btn4 = document.getElementById('js-btn-danger');
     btnSecondary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-warning');
+    var btn5 = document.getElementById('js-btn-warning');
     btnSecondary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-info');
+    var btn6 = document.getElementById('js-btn-info');
     btnSecondary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-light');
+    var btn7 = document.getElementById('js-btn-light');
     btnSecondary.addEventListener('click', clickBtn);
 
-    var btnSecondary = document.getElementById('js-btn-dark');
+    var btn8 = document.getElementById('js-btn-dark');
     btnSecondary.addEventListener('click', clickBtn);
 
   </script>
