--- a/yozakura/index.html
+++ b/yozakura/index.html
@@ -24,7 +24,12 @@
     <button id="js-btn-light" type="button" class="btn btn-light">Light</button>
     <button id="js-btn-dark" type="button" class="btn btn-dark">Dark</button>
 
-
+    <script>
+        function clickBtn(e) {
+            alert(e.currentTarget.id);
+        }
+        document.querySelectorAll('.btn').forEach(e => e.addEventListener('click', clickBtn));
+    </script>
 
 </body>
 
