100本ノック１本目

--- a/ahetaro/warm up.html
+++ b/ahetaro/warm up.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="warm up.css">
+
+    <style>
+        p {
+            color: aqua;
+        }
+        /* h1{
+            color: aqua;
+        } */
+    </style>
 </head>
 
 <body>
-    <h1>Make IT</h1>
+    <p>Make IT</p>
+    <!-- <h1>Make IT</h1> -->
 
 </body>
 
